--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Neurohackweek
 email: arokem@uw.edu
-url: https://neurohackweek.github.io
+url: http://aaarendt.github.io/geohack_2016
 description: "A summer school in neuroimaging and data science at the University of Washington eScience Institute"
 
 # Color settings (hex-codes without the leading hash-tag)
