--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Neurohackweek
 email: arokem@uw.edu
 url: http://aaarendt.github.io/geohack_2016
-description: "A summer school in neuroimaging and data science at the University of Washington eScience Institute"
+description: "A summer school in geohacking at the University of Washington eScience Institute"
 encoding: utf-8
 # Color settings (hex-codes without the leading hash-tag)
 color:
